# minimal_lua_cpp_binding

./: CMakeLists.txt  README.md  build.sh  run.sh
examples/: CMakeLists.txt
examples/dir0/: CMakeLists.txt  cfg.lua  main  main.cpp
examples/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
lua/: CMakeLists.txt
luabinding/: CMakeLists.txt  luabinding.cpp  luabinding.h
scripts/: lua_download.sh
